--- a/app/src/main/res/layout/profile_item_passcode.xml
+++ b/app/src/main/res/layout/profile_item_passcode.xml
@@ -8,26 +8,33 @@
             android:id="@+id/icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_margin="24dp"
-            android:src="@drawable/phone_grey"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_setlock"
             />
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_gravity="center_vertical">
         <TextView
-                android:id="@+id/data"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:textColor="#191919"/>
+                android:textColor="#191919"
+                android:text="@string/passcode_lock"
+                />
         <TextView
-                android:id="@+id/data_type"
-                android:layout_width="match_parent"
+                android:id="@+id/pass_code_status"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textColor="#767676"
+                android:text="@string/passcode_disabled"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 />
     </LinearLayout>
 </LinearLayout>
