--- a/app/src/main/res/values-ru/chat_list_strings.xml
+++ b/app/src/main/res/values-ru/chat_list_strings.xml
@@ -4,7 +4,7 @@
     <string name="logout">Выход</string>
     <string name="navigation_drawer_close">закрыть</string>
     <string name="navigation_drawer_open">открыть</string>
-    <string name="waiting_for_connection">Ожидаем подключения...</string>
+    <string name="waiting_for_connection">Ожидаем подключения…</string>
     <string name="file">Файл</string>
     <string name="contact">Контакт</string>
     <string name="geo">Точка на карте</string>
@@ -13,4 +13,5 @@
     <string name="video">Видео</string>
     <string name="Аудио">Аудио</string>
     <string name="contacts">Контакты</string>
+    <string name="settings">Настройки</string>
 </resources>
