--- a/app/src/main/res/values-ru/profile_strings.xml
+++ b/app/src/main/res/values-ru/profile_strings.xml
@@ -4,4 +4,8 @@
     <string name="copy_phone">Скопировать</string>
     <string name="item_type_mobile">Мобильный</string>
     <string name="item_type_username">Ник</string>
+    <string name="passcode_lock">Блокировка паролем</string>
+    <string name="passcode_disabled">Выключена</string>
+    <string name="passcode_enabled">Включена</string>
+    <string name="edit_name">Редактировать имя</string>
 </resources>
