--- a/app/src/main/res/values/profile_strings.xml
+++ b/app/src/main/res/values/profile_strings.xml
@@ -4,4 +4,8 @@
     <string name="copy_phone">Copy</string>
     <string name="item_type_mobile">Phone</string>
     <string name="item_type_username">Username</string>
+    <string name="passcode_lock">Passcode Lock</string>
+    <string name="passcode_disabled">Disabled</string>
+    <string name="passcode_enabled">Enabled</string>
+    <string name="edit_name">Edit name</string>
 </resources>
