--- a/app/src/main/res/layout/profile_edit_name.xml
+++ b/app/src/main/res/layout/profile_edit_name.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.korniltsev.telegram.auth.name.EnterNameView xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.korniltsev.telegram.profile.edit.name.EditNameView xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:orientation="vertical"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
@@ -18,11 +18,18 @@
             android:layout_weight="1"
             style="@style/ToolbarShadow"
             >
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginLeft="15dp"
+                   android:layout_marginTop="28dp"
+                   android:src="@drawable/ic_user"
+                />
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="16dp">
+                android:padding="16dp"
+                android:layout_marginLeft="51dp">
             <EditText
                     android:id="@+id/first_name"
                     android:layout_width="match_parent"
@@ -31,7 +38,8 @@
                     android:inputType="textCapWords"
                     android:imeOptions="actionNext"
                     android:hint="@string/hint_first_name"
-
+                    android:paddingBottom="16dp"
+                    android:layout_marginTop="4dp"
                     />
 
             <EditText
@@ -44,9 +52,11 @@
                     android:imeOptions="actionDone"
                     android:hint="@string/hint_last_name"
 
+                    android:paddingBottom="16dp"
+
                     />
         </LinearLayout>
 
     </FrameLayout>
 
-</ru.korniltsev.telegram.auth.name.EnterNameView>
+</ru.korniltsev.telegram.profile.edit.name.EditNameView>
