--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,11 @@
         <item name="android:textColor">#222222</item>
         <item name="android:textSize">16sp</item>
     </style>
+    <style name="EditPassCodeMainLabel">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">#191919</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
