--- a/app/src/main/res/layout/chat_list_view.xml
+++ b/app/src/main/res/layout/chat_list_view.xml
@@ -15,7 +15,16 @@
             android:orientation="vertical"
             >
 
-        <include layout="@layout/toolbar"/>
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:theme="@style/ToolBarStyle"
+                app:popupTheme="@style/Theme.AppCompat.Light"
+                android:elevation="4dp"
+                android:background="?attr/colorPrimary"
+                android:paddingRight="4dp"
+                />
 
         <FrameLayout
                 android:layout_width="match_parent"
