--- a/app/src/main/res/layout/profile_item_passcode.xml
+++ b/app/src/main/res/layout/profile_item_passcode.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:textColor="#767676"
+                android:textColor="#8A8A8A"
                 android:text="@string/passcode_disabled"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
