--- a/app/src/main/res/values-ru/chat_list_strings.xml
+++ b/app/src/main/res/values-ru/chat_list_strings.xml
@@ -14,4 +14,5 @@
     <string name="Аудио">Аудио</string>
     <string name="contacts">Контакты</string>
     <string name="settings">Настройки</string>
+    <string name="menu_lock">Lock</string>
 </resources>
