--- a/app/src/main/res/values/chat_list_strings.xml
+++ b/app/src/main/res/values/chat_list_strings.xml
@@ -14,4 +14,5 @@
     <string name="contact">Contact</string>
     <string name="contacts">Contacts</string>
     <string name="settings">Settings</string>
+    <string name="menu_lock">Lock</string>
 </resources>
