--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,9 +13,10 @@
     </style>
     <style name="EditPassCodeMainLabel">
         <item name="android:gravity">center_vertical</item>
-        <item name="android:textColor">#191919</item>
+        <item name="android:textColor">@color/edit_passcode_label_text_color_selector</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingRight">16dp</item>
         <item name="android:textSize">16sp</item>
     </style>
+
 </resources>
