--- a/app/src/main/res/layout/chat_info_view.xml
+++ b/app/src/main/res/layout/chat_info_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ru.korniltsev.telegram.profile.other.ProfileView
+        <ru.korniltsev.telegram.profile.chat.ChatInfoView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f1f1f1"
+        android:background="#F4F4F4"
         >
 
     <android.support.v7.widget.RecyclerView
@@ -28,4 +28,4 @@
 
         <include layout="@layout/fake_toolbar_wth_avatar_and_title"/>
 
-</ru.korniltsev.telegram.profile.other.ProfileView>
+</ru.korniltsev.telegram.profile.chat.ChatInfoView>
