--- a/app/src/main/res/values/profile_dimens.xml
+++ b/app/src/main/res/values/profile_dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="profile_header_height">144dp</dimen>
+    <!--<dimen name="profile_header_height">144dp</dimen>-->
 </resources>
