WebPage chat item

--- a/app/src/main/res/layout/chat_item_message.xml
+++ b/app/src/main/res/layout/chat_item_message.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#ff252525"
+            android:textColorLink="@color/textColorLink"
             style="@style/item_content_with_margins"
             />
 </RelativeLayout>
