--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -13,7 +13,9 @@
         <item name="colorControlNormal">#e0e0e0</item>
         <item name="colorControlActivated">#579cda</item>
         <item name="colorControlHighlight">#ff75c1f7</item>
-
+        <!--<item name="textColorLink">#ef0</item>-->
+        <!--android:textColorLink-->
+        <!--<item name="android:textColorLink">?android:attr/textColorLinkInverse</item>-->
 
 
         <!--<item name="colorPrimary">@color/foo</item>-->
