--- a/app/src/main/res/drawable/bg_fab_white.xml
+++ b/app/src/main/res/drawable/bg_fab_white.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
-        <layer-list>
-            <item>
-                <shape android:shape="oval">
-                    <solid android:color="?colorControlHighlight"/>
-                </shape>
-            </item>
-        </layer-list>
+        <shape android:shape="oval">
+            <solid android:color="@color/controlHighlight"/>
+        </shape>
     </item>
     <item android:state_pressed="false">
         <shape android:shape="oval">
