--- a/core/src/main/res/layout/toolbar.xml
+++ b/core/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         app:theme="@style/ToolBarStyle"
         app:popupTheme="@style/Theme.AppCompat.Light"
         android:elevation="4dp"
