--- a/app/src/main/res/layout/chat_toolbar_title.xml
+++ b/app/src/main/res/layout/chat_toolbar_title.xml
@@ -5,7 +5,7 @@
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_gravity="left"
-
+              android:gravity="center_vertical"
         >
 
     <ru.korniltsev.telegram.core.views.AvatarView
