--- a/app/src/main/res/layout/chat_view.xml
+++ b/app/src/main/res/layout/chat_view.xml
@@ -8,19 +8,10 @@
 
     <include layout="@layout/toolbar"/>
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/list"
-            android:scrollbars="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="4dp"
-            android:clipToPadding="false"
-            android:layout_marginTop="56dp"
-            android:layout_marginBottom="48dp"
-            />
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="10dp"
+            android:layout_marginTop="56dp"
             style="@style/ToolbarShadow"
             />
     <TextView
@@ -43,52 +34,77 @@
 
             />
 
-    <ru.korniltsev.telegram.chat.adapter.view.MessagePanel
-            android:id="@+id/message_panel"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:gravity="bottom"
-            android:layout_gravity="bottom"
 
-            >
-
-        <ImageView
-                android:id="@+id/btn_left"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/chat_ic_keyboard_emoji_hide_levels"
-                android:scaleType="center"
-                android:background="@drawable/bg_keyboard_tab"
-                />
-
-        <EditText
-                android:id="@+id/input"
-                android:layout_width="0dp"
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_marginTop="56dp"
+                  android:orientation="vertical">
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/list"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
+                android:paddingBottom="4dp"
+                android:clipToPadding="false"
+
+                />
+        <ru.korniltsev.telegram.chat.adapter.view.MessagePanel
+                android:id="@+id/message_panel"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="left|bottom"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:maxLines="4"
-                android:paddingBottom="12dp"
-                android:paddingTop="12dp"
+                android:gravity="bottom"
 
-                android:hint="@string/hint_message_panel"
-                android:imeOptions="flagNoExtractUi"
-                />
+                >
 
-        <ImageView
-                android:id="@+id/btn_right"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/chat_ic_send_attach_levels"
-                android:scaleType="center"
-                android:background="@drawable/bg_keyboard_tab"
-                />
-    </ru.korniltsev.telegram.chat.adapter.view.MessagePanel>
+            <ImageView
+                    android:id="@+id/btn_left"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/chat_ic_keyboard_emoji_hide_levels"
+                    android:scaleType="center"
+                    android:background="@drawable/bg_keyboard_tab"
+                    />
 
+            <EditText
+                    android:id="@+id/input"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:gravity="left|bottom"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:maxLines="4"
+                    android:paddingBottom="12dp"
+                    android:paddingTop="12dp"
+
+                    android:hint="@string/hint_message_panel"
+                    android:imeOptions="flagNoExtractUi"
+                    />
+
+            <ImageView
+                    android:id="@+id/btn_right"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/chat_ic_send_attach_levels"
+                    android:scaleType="center"
+                    android:background="@drawable/bg_keyboard_tab"
+                    />
+        </ru.korniltsev.telegram.chat.adapter.view.MessagePanel>
+    </LinearLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/bot_commands_list"
+            android:layout_width="match_parent"
+            android:layout_height="128dp"
+            android:background="#fff"
+            android:layout_gravity="bottom"
+            android:visibility="gone"
+            android:layout_marginBottom="48dp"
+            />
 </ru.korniltsev.telegram.chat.ChatView>
