Bot emptyView + bot clickable spans in messages

--- a/app/src/main/res/layout/chat_item_message.xml
+++ b/app/src/main/res/layout/chat_item_message.xml
@@ -14,5 +14,6 @@
             android:textColor="#ff252525"
             android:textColorLink="@color/textColorLink"
             style="@style/item_content_with_margins"
+            android:autoLink="all"
             />
 </RelativeLayout>
