bot info in profile

--- a/app/src/main/res/layout/profile_item_data.xml
+++ b/app/src/main/res/layout/profile_item_data.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="75dp"
+              android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:background="@drawable/bg_profile_data">
     <ImageView
@@ -18,12 +18,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="18dp"
+            android:layout_marginBottom="18dp"
             >
         <TextView
                 android:id="@+id/data"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
+                android:paddingRight="16dp"
                 android:textColor="#191919"/>
         <TextView
                 android:id="@+id/data_type"
