animations of right buttons in message panel

--- a/app/src/main/res/layout/chat_view.xml
+++ b/app/src/main/res/layout/chat_view.xml
@@ -57,13 +57,15 @@
                     android:src="@drawable/chat_ic_keyboard_emoji_hide_levels"
                     android:scaleType="center"
                     android:background="@drawable/bg_keyboard_tab"
+                    android:layout_gravity="left"
                     />
 
             <EditText
                     android:id="@+id/input"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="48dp"
+                    android:layout_marginRight="48dp"
                     android:background="@null"
                     android:gravity="left|bottom"
                     android:paddingLeft="4dp"
@@ -76,28 +78,52 @@
                     android:imeOptions="flagNoExtractUi"
                     />
 
+            <LinearLayout
+                    android:id="@+id/right_buttons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    >
+                <ImageView
+                        android:id="@+id/btn_bot"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/ic_slash"
+                        android:scaleType="center"
+                        android:background="@drawable/bg_keyboard_tab"
+                        />
+                <ImageView
+                        android:id="@+id/btn_attach"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/ic_attach"
+                        android:scaleType="center"
+                        android:background="@drawable/bg_keyboard_tab"
+                        />
+                <ImageView
+                        android:id="@+id/btn_record_audio"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/ic_mic"
+                        android:scaleType="center"
+                        android:background="@drawable/bg_keyboard_tab"
+                        />
+
+            </LinearLayout>
             <ImageView
                     android:id="@+id/btn_right"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:src="@drawable/chat_ic_send_attach_levels"
+                    android:src="@drawable/ic_send"
                     android:scaleType="center"
                     android:background="@drawable/bg_keyboard_tab"
+                    android:layout_gravity="right"
+                    android:visibility="gone"
                     />
         </ru.korniltsev.telegram.chat.adapter.view.MessagePanel>
 
-        <!--<LinearLayout-->
-        <!--android:id="@+id/bot_reply_keyboard"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical"-->
-        <!--android:padding="16dp"-->
-        <!--android:visibility="gone"-->
-        <!--android:background="#F5F6F7"-->
-        <!-->-->
-
-        <!--</LinearLayout>-->
     </ru.korniltsev.telegram.chat.keyboard.hack.TrickyLinearyLayout>
+
     <View
             android:id="@+id/bot_command_shadow"
             android:layout_width="match_parent"
