--- a/app/src/main/res/layout/chat_view.xml
+++ b/app/src/main/res/layout/chat_view.xml
@@ -91,6 +91,7 @@
                         android:src="@drawable/ic_slash"
                         android:scaleType="center"
                         android:background="@drawable/bg_keyboard_tab"
+                        android:visibility="gone"
                         />
                 <ImageView
                         android:id="@+id/btn_attach"
