--- a/app/src/main/res/layout/bot_command_item.xml
+++ b/app/src/main/res/layout/bot_command_item.xml
@@ -25,10 +25,11 @@
 
     <TextView
             android:id="@+id/description"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#999999"
             android:layout_marginLeft="13dp"
+            android:paddingRight="16dp"
             android:singleLine="true"
             />
 
