--- a/app/src/main/res/layout/chat_list_view.xml
+++ b/app/src/main/res/layout/chat_list_view.xml
@@ -76,6 +76,8 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginLeft="18dp"
+                    android:layout_marginRight="18dp"
+                    android:singleLine="true"
                     android:layout_marginTop="16dp"
                     />
 
