--- a/app/src/main/res/layout/chat_view.xml
+++ b/app/src/main/res/layout/chat_view.xml
@@ -118,7 +118,7 @@
                     android:src="@drawable/ic_send"
                     android:scaleType="center"
                     android:background="@drawable/bg_keyboard_tab"
-                    android:layout_gravity="right"
+                    android:layout_gravity="right|bottom"
                     android:visibility="gone"
                     />
         </ru.korniltsev.telegram.chat.adapter.view.MessagePanel>
