--- a/app/src/main/res/layout/chat_view.xml
+++ b/app/src/main/res/layout/chat_view.xml
@@ -23,107 +23,153 @@
             android:layout_gravity="center"
             />
 
-    <ru.korniltsev.telegram.chat.keyboard.hack.TrickyLinearyLayout
+    <ru.korniltsev.telegram.chat.keyboard.hack.TrickyFrameLayout
             android:id="@+id/list_and_message_panel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="56dp"
             android:orientation="vertical">
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/list"
-                android:scrollbars="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:paddingBottom="4dp"
-                android:clipToPadding="false"
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:orientation="vertical">
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/list"
+                    android:scrollbars="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:paddingBottom="4dp"
+                    android:clipToPadding="false"
 
-                />
-        <ru.korniltsev.telegram.chat.adapter.view.MessagePanel
-                android:id="@+id/message_panel"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:gravity="bottom"
-
-                >
-
-            <ImageView
-                    android:id="@+id/btn_left"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/chat_ic_keyboard_emoji_hide_levels"
-                    android:scaleType="center"
-                    android:background="@drawable/bg_keyboard_tab"
-                    android:layout_gravity="left"
                     />
-
-            <EditText
-                    android:id="@+id/input"
+            <ru.korniltsev.telegram.chat.adapter.view.MessagePanel
+                    android:id="@+id/message_panel"
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"
-                    android:layout_marginRight="48dp"
-                    android:background="@null"
-                    android:gravity="left|bottom"
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
-                    android:maxLines="4"
-                    android:paddingBottom="12dp"
-                    android:paddingTop="12dp"
+                    android:gravity="bottom"
 
-                    android:hint="@string/hint_message_panel"
-                    android:imeOptions="flagNoExtractUi"
-                    />
-
-            <LinearLayout
-                    android:id="@+id/right_buttons"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
                     >
+
                 <ImageView
-                        android:id="@+id/btn_bot"
+                        android:id="@+id/btn_left"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:src="@drawable/ic_slash"
+                        android:src="@drawable/chat_ic_keyboard_emoji_hide_levels"
                         android:scaleType="center"
                         android:background="@drawable/bg_keyboard_tab"
+                        android:layout_gravity="left"
+                        />
+
+                <EditText
+                        android:id="@+id/input"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="48dp"
+                        android:layout_marginRight="48dp"
+                        android:background="@null"
+                        android:gravity="left|bottom"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:maxLines="4"
+                        android:paddingBottom="12dp"
+                        android:paddingTop="12dp"
+
+                        android:hint="@string/hint_message_panel"
+                        android:imeOptions="flagNoExtractUi"
+                        />
+
+                <LinearLayout
+                        android:id="@+id/right_buttons"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        >
+                    <ImageView
+                            android:id="@+id/btn_bot"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:src="@drawable/ic_slash"
+                            android:scaleType="center"
+                            android:background="@drawable/bg_keyboard_tab"
+                            android:visibility="gone"
+                            />
+                    <ImageView
+                            android:id="@+id/btn_attach"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:src="@drawable/ic_attach"
+                            android:scaleType="center"
+                            android:background="@drawable/bg_keyboard_tab"
+                            />
+                    <ImageView
+                            android:id="@+id/btn_record_audio"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:src="@drawable/ic_mic"
+                            android:scaleType="center"
+                            android:background="@drawable/bg_keyboard_tab"
+                            />
+
+                </LinearLayout>
+                <ImageView
+                        android:id="@+id/btn_right"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/ic_send"
+                        android:scaleType="center"
+                        android:background="@drawable/bg_keyboard_tab"
+                        android:layout_gravity="right|bottom"
                         android:visibility="gone"
                         />
-                <ImageView
-                        android:id="@+id/btn_attach"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/ic_attach"
-                        android:scaleType="center"
-                        android:background="@drawable/bg_keyboard_tab"
-                        />
-                <ImageView
-                        android:id="@+id/btn_record_audio"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/ic_mic"
-                        android:scaleType="center"
-                        android:background="@drawable/bg_keyboard_tab"
+
+            </ru.korniltsev.telegram.chat.adapter.view.MessagePanel>
+
+        </LinearLayout>
+        <ru.korniltsev.telegram.chat.VoiceRecordingOverlay
+                android:id="@+id/voice_recording_overlay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+            <FrameLayout
+                    android:id="@+id/voice_panel"
+                    android:layout_width="match_parent"
+                    android:layout_height="47dp"
+                    android:background="#fff"
+                    android:layout_gravity="bottom">
+                <View
+                        android:id="@+id/red_dot"
+                        android:layout_width="8dp"
+                        android:layout_height="8dp"
+                        android:layout_gravity="center_vertical|left"
+                        android:layout_marginLeft="13dp"
+                        android:background="@drawable/ic_red_dot"/>
+                <TextView
+                        android:id="@+id/time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|left"
+                        android:layout_marginLeft="32dp"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Slide to Cancel"
                         />
 
-            </LinearLayout>
-            <ImageView
-                    android:id="@+id/btn_right"
+            </FrameLayout>
+            <View
+                    android:id="@+id/anchor"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:src="@drawable/ic_send"
-                    android:scaleType="center"
-                    android:background="@drawable/bg_keyboard_tab"
                     android:layout_gravity="right|bottom"
-                    android:visibility="gone"
-                    />
-        </ru.korniltsev.telegram.chat.adapter.view.MessagePanel>
-
-    </ru.korniltsev.telegram.chat.keyboard.hack.TrickyLinearyLayout>
+                    android:background="#ef0"/>
+        </ru.korniltsev.telegram.chat.VoiceRecordingOverlay>
+    </ru.korniltsev.telegram.chat.keyboard.hack.TrickyFrameLayout>
 
     <View
             android:id="@+id/bot_command_shadow"
