Voice recording: Red button animation

--- a/app/src/main/res/layout/chat_view.xml
+++ b/app/src/main/res/layout/chat_view.xml
@@ -159,6 +159,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="Slide to Cancel"
+                        android:drawableLeft="@drawable/ic_arrow_left"
                         />
 
             </FrameLayout>
