--- a/app/src/main/res/layout/chat_item_sticker.xml
+++ b/app/src/main/res/layout/chat_item_sticker.xml
@@ -1,18 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              style="@style/Item.Root"
-        >
-
-    <include layout="@layout/chat_item_avatar"/>
-
-    <include layout="@layout/chat_item_nick_and_time"/>
-
-    <ru.korniltsev.telegram.chat.adapter.view.StickerView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/item_content_with_margins"
-            android:scaleType="fitStart"
-            android:layout_marginTop="3dp"
-            />
-</RelativeLayout>
+<ru.korniltsev.telegram.chat.adapter.view.StickerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitStart"
+        />
