--- a/app/src/main/res/layout/chat_item_geo.xml
+++ b/app/src/main/res/layout/chat_item_geo.xml
@@ -1,17 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              style="@style/Item.Root"
-        >
-
-    <include layout="@layout/chat_item_avatar"/>
-
-    <include layout="@layout/chat_item_nick_and_time"/>
-
-    <ru.korniltsev.telegram.chat.adapter.view.GeoPointView
-            android:id="@+id/geo_point"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            style="@style/item_content_with_margins"
-            android:layout_marginTop="3dp"
-            />
-</RelativeLayout>
+<ru.korniltsev.telegram.chat.adapter.view.GeoPointView
+        android:id="@+id/geo_point"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"/>
