--- a/app/src/main/res/layout/chat_item_video.xml
+++ b/app/src/main/res/layout/chat_item_video.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              style="@style/Item.Root"
-        >
 
-    <include layout="@layout/chat_item_avatar"/>
-
-    <include layout="@layout/chat_item_nick_and_time"/>
-
-    <ru.korniltsev.telegram.chat.adapter.view.VideoView
-            android:id="@+id/video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/item_content_with_margins"
-            android:layout_marginTop="3dp"
-            >
+<ru.korniltsev.telegram.chat.adapter.view.VideoView
+        android:id="@+id/video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android">
         <ImageView
                 android:id="@+id/preview"
                 android:layout_width="match_parent"
@@ -30,4 +21,3 @@
 
     </ru.korniltsev.telegram.chat.adapter.view.VideoView>
 
-</RelativeLayout>
